구글 광고 추가

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,6 @@
 <footer class="site-footer h-card">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8794269458658143"
+     crossorigin="anonymous"></script>
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
   <div class="wrapper">
