--- a/_includes/post.html
+++ b/_includes/post.html
@@ -12,7 +12,15 @@
 	<div class="post-content">
 		{{ content }}
 	</div>
-	{% if page.comments %}
+	<footer class="post-navigation">
+		{% if page.previous %}
+			<a class="prev-post" href="{{ page.previous.url }}">&larr; {{ page.previous.title }}</a>
+		{% endif %}
+		{% if page.next %}
+			<a class="next-post" href="{{ page.next.url }}">{{ page.next.title }} &rarr;</a>
+		{% endif %}
+	</footer>
+<!-- 	{% if page.comments %}
 	<div id="disqus_thread"></div>
 <script>
     /**
@@ -32,5 +40,5 @@
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-	{% endif %}
+	{% endif %} -->
 </article>
