--- a/_includes/post.html
+++ b/_includes/post.html
@@ -20,6 +20,28 @@
 			<a class="next-post" href="{{ page.next.url }}">다음</a>
 		{% endif %}
 	</footer>
+	<style>
+		.post-navigation {
+		    display: flex;
+		    justify-content: space-between;
+		    margin-top: 20px;
+		    padding: 10px 0;
+		    border-top: 1px solid #ddd;
+		}
+		
+		.prev-post, .next-post {
+		    font-size: 1.1rem;
+		    font-weight: bold;
+		    text-decoration: none;
+		    color: #0073e6;
+		    transition: color 0.3s;
+		}
+		
+		.prev-post:hover, .next-post:hover {
+		    color: #005bb5;
+		}
+
+	</style>
 <!-- 	{% if page.comments %}
 	<div id="disqus_thread"></div>
 <script>
