--- a/_includes/post.html
+++ b/_includes/post.html
@@ -14,10 +14,10 @@
 	</div>
 	<footer class="post-navigation">
 	    {% if page.previous %}
-	        <a class="prev-post" href="{{ page.previous.url }}">&larr; <span class="post-title">{{ page.previous.title }}</span></a>
+	        <a class="prev-post" href="{{ page.previous.url }}">&larr; <span class="next-title">{{ page.previous.title }}</span></a>
 	    {% endif %}
 	    {% if page.next %}
-	        <a class="next-post" href="{{ page.next.url }}"><span class="post-title">{{ page.next.title }}</span> &rarr;</a>
+	        <a class="next-post" href="{{ page.next.url }}"><span class="next-title">{{ page.next.title }}</span> &rarr;</a>
 	    {% endif %}
 	</footer>
 	
@@ -43,7 +43,7 @@
 	        color: #005bb5;
 	    }
 	
-	    .post-title {
+	    .next-title {
 	        display: inline-block;
 	        max-width: 100px;
 	        white-space: nowrap;
