--- a/_includes/post.html
+++ b/_includes/post.html
@@ -41,6 +41,7 @@
 	
 	    .prev-post:hover, .next-post:hover {
 	        color: #005bb5;
+	    	text-decoration: none;
 	    }
 	
 	    .next-title {
