--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:type" content="website"> 
+	<meta property="og:title" content="ALOG">
+	<meta property="og:description" content="단어 정보 블로그">
+	<meta property="og:url" content="https://y00913.github.io">
 	{%- feed_meta -%}
 	
 	{%- if jekyll.environment == 'production' and site.google_analytics -%}
