--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,14 +2,18 @@
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8794269458658143"
      crossorigin="anonymous"></script>
 	<meta name="naver-site-verification" content="ebf4e8e2315604e45be4bf997eda0abe8f3012ea" />
-	<meta name="description" content="단어 정보 블로그" />
+	    
+	<title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
+	<meta name="description" content="{{ page.excerpt | strip_html | truncatewords: 20 }}">
+	
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta property="og:type" content="website"> 
-	<meta property="og:title" content="ALOG">
-	<meta property="og:description" content="단어 정보 블로그">
-	<meta property="og:url" content="https://y00913.github.io">
+	
+	<meta property="og:title" content="{{ page.title }}">
+	<meta property="og:description" content="{{ page.excerpt | strip_html | truncatewords: 20 }}">
+	<meta property="og:type" content="article">
+	<meta property="og:url" content="{{ page.url | absolute_url }}">
 	{%- feed_meta -%}
 	
 	{%- if jekyll.environment == 'production' and site.google_analytics -%}
