--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
 	
 	<meta property="og:title" content="{{ page.title | default: 'ALOG' }}">
 	<meta property="og:description" content="{{ page.excerpt | default: '단어 정보 블로그' }}">
-	<meta property="og:type" content="article">
+	<meta property="og:type" content="website">
 	<meta property="og:url" content="{{ page.url | absolute_url }}">
 	{%- feed_meta -%}
 	
