--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
+	<meta property="og:site_name" content="ALOG">
 	<meta property="og:title" content="{{ page.title | default: 'ALOG' }}">
 	<meta property="og:description" content="{{ page.excerpt | strip_html | truncatewords: 20 | default: '단어 정보 블로그' }}">
 	<meta property="og:type" content="website">
