--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
 	<meta property="og:description" content="{{ page.excerpt | strip_html | truncatewords: 20 | default: '단어 정보 블로그' }}">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="{{ page.url | absolute_url }}">
+	<link rel="icon" type="image/png" href="/favicon.png">
 	{%- feed_meta -%}
 	
 	{%- if jekyll.environment == 'production' and site.google_analytics -%}
