--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="{{ page.url | absolute_url }}">
 	<link rel="icon" href="/favicon.ico">
+	<link rel="shortcut icon" href="/favicon.ico">
 	{%- feed_meta -%}
 	
 	{%- if jekyll.environment == 'production' and site.google_analytics -%}
