--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,11 @@
 
 	<title>
 	    {%- if page.title -%}
-	        {{ page.title | escape }} | {{ site.title | escape }}
+			{%- if page.date -%}
+	            {{ page.date | date: "%Y/%m/%d" }} | {{ page.title | escape }} | {{ site.title | escape }}
+	        {%- else -%}
+	            {{ page.title | escape }} | {{ site.title | escape }}
+	        {%- endif -%}
 	    {%- else -%}
 	        {{ site.title | escape }}
 	    {%- endif -%}
@@ -31,4 +35,5 @@
 		{%- include google-analytics.html -%}
 	{%- endif -%}
 </head>
+
 
