--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,6 +27,14 @@
 	<meta property="og:description" content="{{ page.excerpt | strip_html | truncatewords: 20 | default: '단어 정보 블로그' }}">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="{{ page.url | absolute_url }}">
+  	<meta property="article:tag" content="요리">
+  	<meta property="article:tag" content="단어">
+  	<meta property="article:tag" content="외국 요리">
+  	<meta property="article:tag" content="조리법">
+  	<meta property="article:tag" content="명언">
+  	<meta property="article:tag" content="영단어">
+  	<meta property="article:tag" content="요리 유래">
+  	<link rel="canonical" href="{{ page.url | absolute_url }}">
 	<link rel="icon" href="/favicon.ico">
 	<link rel="shortcut icon" href="/favicon.ico">
 	{%- feed_meta -%}
