--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
 
 	<meta property="og:site_name" content="ALOG">
 	<meta property="og:title" content="{{ page.title | default: 'ALOG' }}">
-	<meta property="og:description" content="{{ page.excerpt | strip_html | truncatewords: 20 | default: '단어 정보 블로그' }}">
+	<meta property="og:description" content="{{ page.excerpt | strip_html | truncatewords: 20 | default: '요리 정보 블로그' }}">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="{{ page.url | absolute_url }}">
   	<meta property="article:tag" content="요리">
