--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,7 @@
 	    {%- endif -%}
 	</title>
 
+	<meta name="robots" content="index,follow">
 	<meta property="og:site_name" content="ALOG">
 	<meta property="og:title" content="{{ page.title | default: 'ALOG' }}">
 	<meta property="og:description" content="{{ page.excerpt | strip_html | truncatewords: 20 | default: '요리 정보 블로그' }}">
