--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
 <head>
+	{% unless page.url == "/sitemap.xml" %}
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8794269458658143"
      crossorigin="anonymous"></script>
+	{% endunless %}
 	<meta name="naver-site-verification" content="ebf4e8e2315604e45be4bf997eda0abe8f3012ea" />
 	<meta name="google-site-verification" content="MnsV74jni3LkNBCa2BYCERRt5YZyjnAqMlstRH_JKxM" />
 
@@ -44,6 +46,7 @@
 		{%- include google-analytics.html -%}
 	{%- endif -%}
 
+	{% unless page.url == "/sitemap.xml" %}
 	<script type="application/ld+json">
 	{
   		"@context": "https://schema.org",
@@ -70,7 +73,10 @@
   		"dateModified": "{{ page.last_modified_at | default: page.date | date_to_xmlschema }}"
 	}
 	</script>
+	{% endunless %}
+
 
 </head>
+
 
 
