--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
 <head>
+	{% unless page.is_sitemap %}
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8794269458658143"
      crossorigin="anonymous"></script>
+	{% endunless %}
 	<meta name="naver-site-verification" content="ebf4e8e2315604e45be4bf997eda0abe8f3012ea" />
 	<meta name="google-site-verification" content="MnsV74jni3LkNBCa2BYCERRt5YZyjnAqMlstRH_JKxM" />
 
@@ -72,6 +74,7 @@
 	</script>
 
 </head>
+
 
 
 
