--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@ body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	font-family: 'Gelasio', 'BMJUA', serif;
+	font-family: 'BMJUA';
 	color: #2c3e50;
 }
 
