--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 	<meta name="naver-site-verification" content="ebf4e8e2315604e45be4bf997eda0abe8f3012ea" />
 	<meta name="google-site-verification" content="MnsV74jni3LkNBCa2BYCERRt5YZyjnAqMlstRH_JKxM" />
 
-	<meta name="description" content="{{ page.excerpt | strip_html | truncatewords: 20 | default: '세계 요리 정보 블로그' }}">
+	<meta name="description" content="{{ page.excerpt | strip_html | truncatewords: 20 | default: '오늘의 트렌드  정보 블로그' }}">
 	
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,11 +27,13 @@
 	<meta name="robots" content="index,follow">
 	<meta property="og:site_name" content="ALOG">
 	<meta property="og:title" content="{{ page.title | default: 'ALOG' }}">
-	<meta property="og:description" content="{{ page.excerpt | strip_html | truncatewords: 20 | default: '세계 요리 정보 블로그' }}">
+	<meta property="og:description" content="{{ page.excerpt | strip_html | truncatewords: 20 | default: '오늘의 트렌드 정보 블로그' }}">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="{{ page.url | absolute_url }}">
+  	<meta property="article:tag" content="트렌드">
+	<meta property="article:tag" content="트렌드 정보">
+	<meta property="article:tag" content="키워드">
   	<meta property="article:tag" content="요리">
-  	<meta property="article:tag" content="단어">
   	<meta property="article:tag" content="외국 요리">
 	<meta property="article:tab" content="세계 요리">
   	<meta property="article:tag" content="조리법">
