--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,7 +120,7 @@ code {
 
 .sidebar-brand > a {
 	font-size: 300%;
-	font-family: 'Gelasio';
+	font-family: "BMJUA";
 	color: #fff;
 }
 
@@ -139,7 +139,7 @@ code {
 
 .nav-title {
 	font-size: 100%;
-	font-family: "Noto Sans";
+	font-family: "BMJUA";
 	text-transform: uppercase;
 	border-bottom: 1px solid gray;
 	margin-bottom: 5px;
@@ -147,7 +147,7 @@ code {
 
 a.nav-item {
 	font-size: 120%;
-	font-family: "Noto Sans";
+	font-family: "BMJUA";
 	text-transform: capitalize;
 	color: #aaa;
 }
@@ -239,7 +239,7 @@ article h3,
 article h4,
 article h5,
 article h6 {
-	font-family: "Roboto", "Nanum Gothic";
+	font-family: "BMJUA";
 	color: #333;
   	margin-bottom: 0;
 }
