--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,13 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'HannaAir';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.0/BMHANNAAir.woff') format('woff');
+    font-weight: normal;
+    font-display: swap;
+}
+
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -63,7 +70,7 @@ body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	font-family: 'HannaPro';
+	font-family: 'BMJUA';
 	color: #2c3e50;
 }
 
@@ -107,6 +114,7 @@ code {
 
 .sidebar {
 	/*position: fixed;*/
+	font-family: "HannaAir"
 	display: flex;
 	flex-flow: column nowrap;
 	flex: 0 0 220px;
@@ -246,9 +254,9 @@ article h3,
 article h4,
 article h5,
 article h6 {
-	font-family: "HannaPro";
+	font-family: "BMJUA";
 	color: #333;
-  	margin-bottom: 0;
+  	/*margin-bottom: 0;*/
 }
 
 article.home h1 a,
@@ -312,6 +320,37 @@ footer {
 	color: #ccc;
 }
 
+.post-navigation {
+        display: flex;
+	font-family: "BMJUA"
+        justify-content: space-between;
+        margin-top: 20px;
+        padding: 10px 0;
+        border-top: 1px solid #ddd;
+}
+	
+.prev-post, .next-post {
+        font-size: 1.1rem;
+        font-weight: bold;
+        text-decoration: none;
+        color: #0073e6;
+        transition: color 0.3s;
+        max-width: 45%;
+}
+	
+.prev-post:hover, .next-post:hover {
+        color: #005bb5;
+    	text-decoration: none;
+}
+	
+.next-title {
+        display: inline-block;
+        max-width: 150px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+	vertical-align: middle;
+}
 
 @media (max-width: 576px) {
 	article {
@@ -327,6 +366,7 @@ footer {
 	}
 
 	.sidebar {
+		font-family: "HannaAir"
 		font-size: 0.8em;
 		flex: 0 0 auto;
 		flex-flow: row nowrap;
