--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,7 +114,7 @@ code {
 
 .sidebar {
 	/*position: fixed;*/
-	font-family: "HannaAir"
+	font-family: "HannaAir";
 	display: flex;
 	flex-flow: column nowrap;
 	flex: 0 0 220px;
@@ -256,6 +256,7 @@ article h5,
 article h6 {
 	font-family: "BMJUA";
 	color: #333;
+	font-weight: normal;
   	/*margin-bottom: 0;*/
 }
 
