--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,3 +1,4 @@
+<!--
 <article class="post">
   <header class="post-header home">
     <div class="post-title">Articles</div>
@@ -8,7 +9,6 @@
     <ul class="post-list">
       {%- for post in site.posts -%}
       <li class="post-list-item">
-        <!-- {%- assign date_format = site.date_format | default: "%b %-d, %Y" -%} -->
         {%- assign date_format = "%Y/%m/%d" -%}
         <span class="post-date">{{ post.date | date: date_format }}</span>
       	<a class="post-link" href="{{ post.url | relative_url }}">
@@ -25,3 +25,46 @@
 
 
 </div>
+-->
+
+<article class="post">
+  <header class="post-header home">
+    <div class="post-title">Articles</div>
+  </header>
+
+  <div class="post-content">
+    {% if paginator.posts.size > 0 %}
+    <ul class="post-list">
+      {% for post in paginator.posts %}
+      <li class="post-list-item">
+        {% assign date_format = "%Y/%m/%d" %}
+        <span class="post-date">{{ post.date | date: date_format }}</span>
+        <a class="post-link" href="{{ post.url | relative_url }}">
+          {{ post.title | escape }}
+        </a>
+        {% if site.show_excerpts %}{{ post.excerpt }}{% endif %}
+      </li>
+      {% endfor %}
+    </ul>
+
+    <div class="pagination">
+      {% if paginator.previous_page %}
+        <a href="{{ paginator.previous_page_path }}">이전</a>
+      {% endif %}
+
+      {% for page in (1..paginator.total_pages) %}
+        {% if page == paginator.page %}
+          <span>{{ page }}</span>
+        {% else %}
+          <a href="{{ paginator.paginate_path | replace: ':num', page }}">{{ page }}</a>
+        {% endif %}
+      {% endfor %}
+
+      {% if paginator.next_page %}
+        <a href="{{ paginator.next_page_path }}">다음</a>
+      {% endif %}
+    </div>
+    {% endif %}
+  </div>
+</article>
+
