--- a/public/css/style.css
+++ b/public/css/style.css
@@ -345,7 +345,7 @@ footer {
 	
 .next-title {
         display: inline-block;
-        max-width: 150px;
+        max-width: 80%;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -390,5 +390,15 @@ footer {
 		visibility: hidden;
 		display: none;
 	}
+
+	.next-title {
+        	display: inline-block;
+	        max-width: 150px;
+        	white-space: nowrap;
+	        overflow: hidden;
+	        text-overflow: ellipsis;
+        	vertical-align: middle;
+	}
+
 }
 
