--- a/public/css/style.css
+++ b/public/css/style.css
@@ -512,7 +512,7 @@ table tbody tr:hover {
 	}
 
 	.sidebar {
-		font-family: "HannaAir"
+		font-family: "HannaAir";
 		font-size: 0.8em;
 		flex: 0 0 auto;
 		flex-flow: row nowrap;
